--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Ruda:wght@400;500;700;800&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Owl Carroussel -->
-    <link rel="stylesheet" href="./assets/css/OwlCarroussel/owl.carousel.min.css">
-    <link rel="stylesheet" href="./assets/css/OwlCarroussel/owl.theme.green.css">
+    <link rel="stylesheet" href="./owl.carousel.min.css">
+    <link rel="stylesheet" href="./owl.theme.green.css">
 </head>
 
 <body>
@@ -425,13 +425,13 @@
 </body>
 
 <!-- JQuery -->
-<script src="./assets/js/jquery.js"></script>
+<script src="./jquery.js"></script>
 <!-- JQuery Mask -->
-<script src="./assets/js/jquery.mask.min.js"></script>
-<script src="./assets/js/custom/mask-form.js"></script>
+<script src="./jquery.mask.min.js"></script>
+<script src="./mask-form.js"></script>
 <!-- Owl Carroussel -->
-<script src="./assets/js/owlCarrousel/owl.carousel.min.js"></script>
-<script src="./assets/js/owlCarrousel/owl.start.function.js"></script>
+<script src="./owl.carousel.min.js"></script>
+<script src="./owl.start.function.js"></script>
 <!-- Formulário -->
-<script src="./assets/js/form/send.js"></script>
+<script src="./send.js"></script>
 </html>
