--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="row">
                     <div class="c-photo">
-                        <img src="./assets/img/profile/profile.jpeg" alt="Antonio Marcos">
+                        <img src="./profile.jpeg" alt="Antonio Marcos">
                     </div>
                     <!-- Descrição Sobre Mim -->
                     <div class="c-descricao">
