--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <!-- Projeto 01 -->
                         <div class="photos">
                             <div class="img">
-                                <img src="./assets/img/projetos/ebookPortfolio.jpg" alt="projeto01">
+                                <img src="./ebookPortfolio.jpg" alt="projeto01">
                                 <div class="descricao">
                                     <p>E-book's</p>
                                 </div>
@@ -310,7 +310,7 @@
                         <!-- Projeto 02 -->
                         <div class="photos">
                             <div class="img">
-                                <img src="./assets/img/projetos/postssocialmedia.jpg" alt="Projeto2">
+                                <img src="./postssocialmedia.jpg" alt="Projeto2">
                                 <div class="descricao">
                                     <p>Posts Social Media</p>
                                 </div>
@@ -319,7 +319,7 @@
                         <!-- Projeto 03 -->
                         <div class="photos">
                             <div class="img">
-                                <img src="./assets/img/projetos/capablogposts.jpg" alt="projeto3">
+                                <img src="./capablogposts.jpg" alt="projeto3">
                                 <div class="descricao">
                                     <p>blog Posts</p>
                                 </div>
@@ -328,7 +328,7 @@
                         <!-- Projeto 04 -->
                         <div class="photos">
                             <div class="img">
-                                <img src="./assets/img/projetos/sitesInstitucionais.jpg" alt="Projeto 4">
+                                <img src="./sitesInstitucionais.jpg" alt="Projeto 4">
                                 <div class="descricao">
                                     <p>Web sites Institucionais</p>
                                 </div>
@@ -337,7 +337,7 @@
                         <!-- Projeto 05 -->
                         <div class="photos">
                             <div class="img">
-                                <img src="./assets/img/projetos/caparobosportfolio.jpg" alt="Projeto 5">
+                                <img src="./caparobosportfolio.jpg" alt="Projeto 5">
                                 <div class="descricao">
                                     <p>Algoritmos de Investimento</p>
                                 </div>
@@ -346,7 +346,7 @@
                         <!-- Projeto 06 -->
                         <div class="photos">
                             <div class="img">
-                                <img src="./assets/img/projetos/mobile apps.png" alt="Projeto 6">
+                                <img src="./mobile apps.png" alt="Projeto 6">
                                 <div class="descricao">
                                     <p>Mobile App's IOS & Android</p>
                                 </div>
