--- a/index.html
+++ b/index.html
@@ -385,8 +385,8 @@
                             </div>
 
                             <div class="controls">
-                                <label for="whatsapp">Whatsapp:</label>
-                                <input type="text" name="whatsapp" id="whatsapp" required> 
+                                <label for="whatsapp">Whatsapp: (*Opcional)</label>
+                                <input type="text" name="whatsapp" id="whatsapp"> 
                             </div>
                         </div>
 
