--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <h1>Antonio Marcos Ramos</h1>
                 <p>Desenvolvedor Web/Mobile & Agente Digital</p>
                 <div class="m-auto-btn">
-                    <button class="btn-portfolio">Portfólio</button>
-                    <button class="btn-curriculum">Currículo</button>
+                    <a href="#portfolio" class="btn-crr"><button class="btn-portfolio" >Portfólio</button></a>
+                    <a href="https://antonioamr.github.io/curriculum/" target="_blank" class="btn-crr"><button class="btn-curriculum">Currículo</button></a>
                 </div>
             </div>
         </secion>
@@ -291,6 +291,7 @@
         </section>
 
         <!-- Sessão Portfolio -->
+        <a id="portfolio">
         <section class="portfolios">
             <div class="container">
                 <div class="p-title">
